# projecto-final-null

./: README.md
proyecto-final/: .gitignore  CMakeLists.txt  LICENSE  input_data.csv  main.cpp
proyecto-final/docs/: Link del video.txt  investigacion_teorica.md  manual_usuario.md
proyecto-final/scripts/: validate_csv.ps1  validate_csv.sh
proyecto-final/src/: csv_loader.h  neural_network.h  tensor.h
proyecto-final/src/layers/: nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h
proyecto-final/src/optimizers/: nn_optimizer.h
proyecto-final/tests/: test_neural_network.cpp  test_tensor.cpp
